--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -16,12 +16,10 @@
  */
 
 @font-face {
-  font-family: "Waltograph Ui";
+  font-family: "Waltograph UI";
   src: url(<%= font_path("waltographui-webfont.eot") %> );
-  src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype"),
-       url(<%= font_path("waltographui-webfont.woff") %> ) format("woff"),
-       url(<%= font_path("waltographui-webfont.ttf") %> ) format("truetype"),
-       url(<%= font_path("waltographui-webfont.svg#fontcustom") %> ) format("svg");
+  src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype");
+       
   font-weight: normal;
   font-style: normal;
 }
