makes all bg pics full page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -20,7 +20,7 @@
 			 <br>
 			 <br>
 			 
-			After a couple of dates later, I was falling in love with Ben. We had been planning a trip to Laguna beach to stargaze. As I laid there, I looked over at Ben and thought to myself, I really love this man. I had never been in love and had never told anyone before that I loved them. I wanted to wait for the “perfect” time to tell him and I knew that this was the night. After stargazing at the beach, we decided to go back to Crean and sit in the football stadium where we spent many nights talking and stargazing with each other. As we sat there, I also told him that if he were to ever tell me a secret, to tell me in my left ear since I have had extreme hearing loss since I was born in my right ear.  Ben leaned in and whispered in my left ear, “ A secret like this.. I love you”. I started crying and at that time I had finally told the man of my dreams that I loved him.  
+			After a couple of dates later, I was falling in love with Ben. We had been planning a trip to Laguna beach to stargaze. As I laid there, I looked over at Ben and thought to myself, I really love this man. I had never been in love and had never told anyone before that I loved them. I wanted to wait for the “perfect” time to tell him and I knew that this was the night. After stargazing at the beach, we decided to go back to Crean and sit in the football stadium where we spent many nights talking and stargazing with each other. As we sat there, I also told him that if he were to ever tell me a secret, to tell me in my left ear since I have had extreme hearing loss since I was born in my right ear.  Ben leaned in and whispered in my right ear, “ A secret like this.. I love you”. I started crying and at that time I had finally told the man of my dreams that I loved him.  
 			 <br>
 			 <br>
 			 
@@ -32,3 +32,12 @@
 </div>
 
 
+<script type="text/javascript">
+	function bgOverlay() {
+	 	var height = $(document).height()
+	 	$('#black_overlay, #bg_about_us').css('height', height)   
+	}
+	window.addEventListener("load", bgOverlay, false);
+	window.addEventListener("resize", bgOverlay, false);
+	
+</script>
