--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,14 +15,14 @@
  *= wedding.css
  */
 
-@font-face {
+/*@font-face {
   font-family: "Waltograph UI";
   src: url(<%= font_path("waltographui-webfont.eot") %> );
   src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype");
        
   font-weight: normal;
   font-style: normal;
-}
+}*/
 
 @font-face {
   font-family: "Waltograph";
