--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -31,7 +31,7 @@
 }
 
 #bg_wedding_details {
-	background-image: url('site.jpg');
+	background-image: url('lounge.jpg');
 	background-position: center;
 }
 
@@ -116,7 +116,7 @@
 
 .about_pic img {
 	width: 90%;
-  	margin: auto;
+  	margin: 25px auto;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
 	background-color: rgba(0,0,0,.5);
@@ -129,8 +129,8 @@
 	width: 100%;
 	height: 60px;
 	background-color: rgba(0,0,0,0.5);
-	position: absolute;
-	bottom: 0;
+	position: fixed;
+	bottom: 25px;
 	left: 0;
 }
 
