--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -73,6 +73,13 @@
 $(".rsvp_no").on("change", function(){
   $('#form_food').css('display', 'none')
 });
+
+function bgOverlay() {
+	 	var height = $(document).height()
+	 	$('#bg_rsvp').css('height', height)   
+	}
+	window.addEventListener("load", bgOverlay, false);
+	window.addEventListener("resize", bgOverlay, false);
 </script>
 
 <%= javascript_include_tag "wedding" %>
