--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -66,26 +66,26 @@
 	        ]
 
 	        function weddingPartyContainers(wpBridal){
-	        	return '<div class="flip"> \
-	        			        <div class="card"> \
-	        			            <div class="face front"> \
-	        			                <div class="wpContainers" id="'+wpBridal.name+'"> \
-	        			                	<div class="wedding_party_names"><h2>'+wpBridal.name+'</h2></div> \
-	        			                	<div class="wedding_party_pic_con"></div> \
-	        			                	<div class="info_container"> \
-	        			                		<h4>Favorite Ice Cream : '+wpBridal.ice_cream+' </h4> \
-	        			                		<h4>Favorite Disney Movie : '+wpBridal.movie+' </h4> \
-	        			                		<hr> \
-	        			                		<h3>'+wpBridal.position+'</h3> \
-	        			                	</div> \
-	        			                	<div class="style_declarations"></div> \
-	        			                </div> \
-	        			            </div> \
-	        			            <div class="face back"> \
-	        			                Back \
-	        			            </div> \
-	        			        </div> \
-	        			    </div> '
+	        		return	'<div class="wpContainers" id="'+wpBridal.name+'"> \
+	        			        <div class="wedding_party_names"><h2>'+wpBridal.name+'</h2></div> \
+		        				<div class="flip"> \
+		        			        <div class="card"> \
+		        			            <div class="face front"> \
+		        			                	<div class="wedding_party_pic_con"></div> \
+		        			                	<div class="info_container"> \
+		        			                		<h4>Favorite Ice Cream : '+wpBridal.ice_cream+' </h4> \
+		        			                		<h4>Favorite Disney Movie : '+wpBridal.movie+' </h4> \
+		        			                		<hr> \
+		        			                		<h3>'+wpBridal.position+'</h3> \
+		        			                	</div> \
+		        			            </div> \
+		        			            <div class="face back"> \
+		        			                Back Hello hjhjhjhjhjhjhjhhj\
+		        			            </div> \
+		        			        </div> \
+		        			    </div> \
+	        			        <div class="style_declarations"></div> \
+	        			</div> '
 
 	            // return '<div class="wpContainers" id="'+wpBridal.name+'"> \
 	            // 			<div class="wedding_party_names"><h2>'+wpBridal.name+'</h2></div> \
@@ -118,8 +118,29 @@
 
 	appendWeddingPartyContainers()
 	    	$('.flip').click(function(){
-        $(this).find('.card').addClass('flipped').mouseleave(function(){
-            // $(this).removeClass('flipped');
+        $(this).siblings('.style_declarations').css({
+        	'left' : '0',
+        	'right' : 'auto',
+        	'border-top': '30px solid #eee',
+        	'border-bottom': '30px solid #202020',
+        	'border-left': '30px solid #202020',
+        	'border-right': '30px solid #eee'
+        })
+        $(this).find('.card')
+        .addClass('flipped')
+        $(this).find('.card')
+        .mouseleave(function(){
+            $(this).removeClass('flipped');
+            $(this).parent().siblings('.style_declarations').css({
+        	'left' : 'auto',
+        	'right' : '0',
+        	'border-top': '30px solid #eee',
+        	'border-bottom': '30px solid #202020',
+        	'border-left': '30px solid #eee',
+        	'border-right': '30px solid #202020'
+        })
+
+
         });
         return false;
     });
